# lending-htmx

./: .gitignore  README.md  compose.yml  pyproject.toml
apps/clients/: admin.py  forms.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/collectors/: admin.py  forms.py  models.py  urls.py  views.py
apps/collectors/migrations/: 0001_initial.py
apps/common/: urls.py  views.py
apps/dashboard/: forms.py  urls.py  views.py
apps/ledger_accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/ledger_accounts/migrations/: 0001_initial.py
apps/loans/: admin.py  forms.py  models.py  services.py  signals.py  urls.py  utils.py  views.py
apps/loans/migrations/: 0001_initial.py  0002_loanamortization.py  0003_loan_transaction_payment.py  0004_alter_payment_payment_date.py  0005_alter_payment_payment_date.py  0006_alter_payment_payment_date.py  0007_alter_payment_payment_date.py  0008_alter_payment_payment_date.py  (+1 more)
apps/transactions/: admin.py  models.py  urls.py
apps/users/: urls.py  views.py
config/: settings.py  urls.py
static/css/: styles.css
static/js/: bar-chart-script.js  donut-chart-script.js
templates/: base.html  footer.html  index.html
templates/client/: clients.html
templates/collector/: collectors.html
templates/components/: navbar.html
templates/dashboard/: dashboard.html
templates/ledger/: ledger.html
templates/loan/: loans.html
templates/loan/partials/: search.html  (+12 more)
templates/loan_product/: loan_products.html
templates/payment/: payments.html
templates/registration/: login.html
(+56 files in other folders)
